master

1.0.4:
seaweedchan:
	-Fix Fappe Tyme
	-Re-add label for image expanding
	-Move restore button to left side as per RiDeag

1.0.3
seaweedchan:
	-Add ad-blocking CSS into Custom CSS examples
Zixaphir:
	-Fix ctrl+s bringing up save dialog
	-Fix issues with soundcloud embedding

1.0.2:
seaweedchan:
	-New Rice option: Emoji Position
	-New layout for Rice tab
	-No more Yotsuba / Yotsuba B in options	

1.0.1:
-New option: Emoji
-New Rice option: Sage Emoji
seaweedchan:
  -Prettier error messages

1.0.0
-Initial release
zixaphir:
	-Fix unread post count for filtered posts
	-Fix issues when switching from ihavenoface's fork
	-Fix backlinks not receiving filtered class
	-Fix QR position not saving on refresh