@@ -1,4 +1,6 @@
 master
+seaweedchan:
+	-Added keybind to toggle Fappe Tyme
 
 1.0.4:
 seaweedchan:
